# zk-pox

./: .gitignore  INTEGRATION.md  README.md  ZK-PoX-PROTOTYPE.md
.github/workflows/: ci.yml
android/: GpsDatabase.kt  GpsLogger.kt  NodeService.patch  ZkPoxModule.kt
extension/: README.md  zkpox_extension.rs  zkpox_verifier_ext.rs
landing/: index.html  package-lock.json  package.json
landing/src/: App.tsx  index.css
landing/src/components/: AntiSpoof.tsx  Architecture.tsx  Comparison.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Privacy.tsx  ProofTypes.tsx  TechStack.tsx  UserStory.tsx
node-integration/: constants-patch.md  node-patch.md  zkpox.rs
react-native/: Credentials.tsx  ZkPoxModule.ts  useZkPox.ts
rust/: Cargo.toml
rust/crates/zkpox-core/: Cargo.toml
rust/crates/zkpox-core/src/: absence.rs  antispoof.rs  circuit.rs  commitment.rs  lib.rs  prover.rs  stability.rs  temporal.rs  travel.rs  types.rs  verifier.rs
rust/crates/zkpox-mobile/: Cargo.toml
rust/crates/zkpox-mobile/src/: lib.rs
solana/: Cargo.toml  package-lock.json  package.json  tsconfig.json  workspace-patch.md
solana/src/: lib.rs
solana/tests/: zk-pox.ts
zeroclaw-skill/: README.md  SKILL.toml
