[package]
name = "zkpox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZK-PoX core library: types, commitments, ZK range proof circuits, prover, verifier"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "1"
hex = "0.4"

bulletproofs = "4"
curve25519-dalek = { version = "4", features = ["serde"] }
merlin = "3"

[dev-dependencies]
rand = "0.8"
