[package]
name = "zkpox-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZK-PoX JNI bridge for Android — calls zkpox-core from Kotlin via NDK"

[lib]
crate-type = ["cdylib"]

[dependencies]
zkpox-core = { path = "../zkpox-core" }
serde_json = "1"
jni = "0.21"
